chore(index): Updated index, added template

--- a/index.htm
+++ b/index.htm
@@ -33,9 +33,46 @@
 		</header>
 
 		<ul role="list" class="grid grid-cols-1 gap-x-6 gap-y-8 lg:grid-cols-3 xl:gap-x-8">
+			<li class="row-span-3 overflow-hidden rounded-xl border border-slate-200 bg-white">
+				<div class="flex justify-between bg-slate-50 p-6">
+					<div class="font-serif font-medium">Pages</div>
+					<dt class="text-sm opacity-80">Last updated</dt>
+				</div>
+				<dl class="divide-y divide-slate-200 px-6 py-4">
+					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./our-energy-mix.htm" target="_blank"
+								class="text-slate-900 hover:underline">Energy Mix</a></dt>
+						<dd class="text-sm text-slate-500">May 5, 2025</dd>
+					</div>
+					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./the-cooperative-difference.htm" target="_blank"
+								class="text-slate-900 hover:underline">Cooperative Difference</a></dt>
+						<dd class="text-sm text-slate-500">May 5, 2025</dd>
+					</div>
+					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./erp.htm" target="_blank"
+								class="text-slate-900 hover:underline">ERP</a></dt>
+						<dd class="text-sm text-slate-500">May 5, 2025</dd>
+					</div>
+
+					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./powering-future.htm" target="_blank"
+								class="text-slate-900 hover:underline">Powering the Future</a></dt>
+						<dd class="text-sm text-slate-500">May 5, 2025</dd>
+					</div>
+
+					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./quality-install.htm" target="_blank"
+								class="text-slate-900 hover:underline">Quality Install Program</a></dt>
+						<dd class="text-sm text-slate-500">Feb 26, 2025</dd>
+					</div>
+
+
+				</dl>
+			</li>
 			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white">
 				<div class="flex justify-between bg-slate-50 p-6">
-					<div class="font-serif font-medium">Resources</div>
+					<div class="font-serif font-medium">Posts</div>
 					<dt class="text-sm opacity-80">Last updated</dt>
 				</div>
 				<dl class="divide-y divide-slate-200 px-6 py-4">
@@ -43,6 +80,11 @@
 						<dt class="text-slate-500"><a href="./battery-resource.htm" target="_blank"
 								class="text-slate-900 hover:underline">Battery</a></dt>
 						<dd class="text-sm text-slate-500">June 11, 2025</dd>
+					</div>
+					<div class="flex justify-between gap-x-4 py-3">
+						<dt class="text-slate-500"><a href="./wildfire-mitigation.htm" target="_blank"
+								class="text-slate-900 hover:underline">Wildfire Mitigation</a></dt>
+						<dd class="text-sm text-slate-500">Feb 26, 2025</dd>
 					</div>
 
 				</dl>
@@ -83,40 +125,7 @@
 					</div>
 				</dl>
 			</li>
-			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white">
-				<div class="flex justify-between bg-slate-50 p-6">
-					<div class="font-serif font-medium">Efficiency</div>
-					<dt class="text-sm opacity-80">Last updated</dt>
-				</div>
-				<dl class="divide-y divide-slate-200 px-6 py-4">
-					<div class="flex justify-between gap-x-4 py-3">
-						<dt class="text-slate-500"><a href="./the-cooperative-difference.htm" target="_blank"
-								class="text-slate-900 hover:underline">Cooperative Difference</a></dt>
-						<dd class="text-sm text-slate-500">May 5, 2025</dd>
-					</div>
-					<div class="flex justify-between gap-x-4 py-3">
-						<dt class="text-slate-500"><a href="./erp.htm" target="_blank"
-								class="text-slate-900 hover:underline">ERP</a></dt>
-						<dd class="text-sm text-slate-500">May 5, 2025</dd>
-					</div>
-					<div class="flex justify-between gap-x-4 py-3">
-						<dt class="text-slate-500"><a href="./our-energy-mix.htm" target="_blank"
-								class="text-slate-900 hover:underline">Energy Mix</a></dt>
-						<dd class="text-sm text-slate-500">May 5, 2025</dd>
-					</div>
-					<div class="flex justify-between gap-x-4 py-3">
-						<dt class="text-slate-500"><a href="./powering-future.htm" target="_blank"
-								class="text-slate-900 hover:underline">Powering the Future</a></dt>
-						<dd class="text-sm text-slate-500">May 5, 2025</dd>
-					</div>
 
-					<div class="flex justify-between gap-x-4 py-3">
-						<dt class="text-slate-500"><a href="./quality-install.htm" target="_blank"
-								class="text-slate-900 hover:underline">Quality Install Program</a></dt>
-						<dd class="text-sm text-slate-500">Feb 26, 2025</dd>
-					</div>
-				</dl>
-			</li>
 			<li class="overflow-hidden rounded-xl border border-slate-200 bg-white">
 				<div class="flex justify-between bg-slate-50 p-6">
 					<div class="font-serif font-medium">Annual Report</div>
@@ -141,11 +150,7 @@
 					<dt class="text-sm opacity-80">Last updated</dt>
 				</div>
 				<dl class="divide-y divide-slate-200 px-6 py-4">
-					<div class="flex justify-between gap-x-4 py-3">
-						<dt class="text-slate-500"><a href="./wildfire-mitigation.htm" target="_blank"
-								class="text-slate-900 hover:underline">Wildfire Mitigation</a></dt>
-						<dd class="text-sm text-slate-500">Feb 26, 2025</dd>
-					</div>
+
 					<div class="flex justify-between gap-x-4 py-3">
 						<dt class="text-slate-500"><a href="./media.htm" target="_blank"
 								class="text-slate-900 hover:underline">Media</a></dt>
