change(batter): v2 edits from JP

--- a/battery-resource.htm
+++ b/battery-resource.htm
@@ -74,7 +74,7 @@
 						helps Tri-State control costs.
 					</p>
 					<p>
-						<a href="#"
+						<a href="https://tristate.coop/erp"
 							class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-gray">
 							Our electric resource plan
 						</a>
@@ -99,8 +99,7 @@
 			</p>
 		</div>
 
-		<!-- mt-8 grid grid-cols-1 sm:grid-cols-2 xl:max-w-3xl gap-8 text-center xl:mb-12 -->
-		<div class="mt-8 grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-4 gap-8 text-center xl:mb-12">
+		<div class="mt-8 grid grid-cols-1 sm:grid-cols-2 xl:max-w-3xl gap-8 text-center xl:mb-12">
 			<div class="px-4 xl:px-0">
 				<div class="text-lg font-semibold">Lithium</div>
 				<div>The most widely used type of
@@ -188,7 +187,7 @@
 					class="absolute inset-0 w-full h-full object-cover" /> <a
 					class="absolute inset-0 flex items-center justify-center z-10" data-featherlight="iframe"
 					data-featherlight-iframe-allowfullscreen="true" data-featherlight-iframe-height="281"
-					data-featherlight-iframe-width="500" href="https://www.youtube.com/embed/7tuWP-26NL4">
+					data-featherlight-iframe-width="500" href="https://www.youtube.com/embed/Cj7umAbenoY">
 					<img alt="Play button" class="size-24 sm:size-44"
 						src="https://tristate.coop/sites/default/files/images/esg/play-video-thumbnail-cover.svg">
 				</a>
