wip(energy): New energy mix section

--- a/our-energy-mix.htm
+++ b/our-energy-mix.htm
@@ -9,7 +9,7 @@
 		body {
 			max-width: 1200px;
 			margin: 0 auto 600px !important;
-			font-size: 14px;
+
 		}
 	</style>
 
@@ -40,17 +40,6 @@
 
 	<link rel="stylesheet" href="assets/css/build.css" />
 
-
-	<style>
-		.block-region-content p {
-			font-size: 16px;
-			/* color: #636466; */
-		}
-
-		.hidden {
-			display: block !important;
-		}
-	</style>
 </head>
 
 <!-- https://tristate.coop -->
@@ -190,7 +179,43 @@
 
 				</div>
 			</section>
+			<section class="min-h-96 bg-navy px-8 py-16 text-center text-white lg:px-16 lg:py-24">
+				<div class="grid gap-y-12 sm:grid-cols-2 sm:gap-x-8 md:grid-cols-3 md:px-4">
+					<div class="space-y-2">
+						<p class="font-serif text-4xl font-light">1,250 MW</p>
+						<p>
+							We're adding 1,250 megawatts
+							of renewables and battery
+							storage between 2026 and 2031
+							to meet system needs and meet
+							emissions goals.
+						</p>
+					</div>
 
+					<div class="space-y-2">
+						<p class="font-serif text-4xl font-light">2 GW</p>
+						<p>
+							Together with production from
+							wind energy, Tri-State will deliver
+							over two gigawatts of renewable
+							energy to members in 2025.
+						</p>
+					</div>
+
+					<div class="space-y-2">
+						<p class="font-serif text-4xl font-light">$9.5M</p>
+						<p>
+							Recently completed Escalante
+							Solar boosts tax revenue in
+							McKinley County, NM—including
+							$7.1M in taxes to the county and
+							$2.4M to the school district
+						</p>
+					</div>
+
+
+				</div>
+			</section>
 
 			<section class="px-8 py-16">
 				<h2 class="font-serif font-light text-3xl text-center">
