--- a/our-energy-mix.htm
+++ b/our-energy-mix.htm
@@ -242,7 +242,7 @@
 				<section class="min-h-96 bg-navy px-8 py-16 text-center text-white sm:min-h-[400px] lg:px-16 lg:py-24">
 					<div class="grid gap-y-12 sm:grid-cols-2 sm:gap-x-8 md:grid-cols-3 md:px-4">
 						<div class="space-y-2">
-							<p class="font-serif text-4xl font-light">1,250 MW</p>
+							<p class="text-2xl font-bold">1,250 MW</p>
 							<p>
 								We're adding 1,250 megawatts
 								of renewables and battery
@@ -253,7 +253,7 @@
 						</div>
 
 						<div class="space-y-2">
-							<p class="font-serif text-4xl font-light">2 GW</p>
+							<p class="text-2xl font-bold">2 GW</p>
 							<p>
 								Together with production from
 								wind energy, Tri-State will deliver
@@ -263,7 +263,7 @@
 						</div>
 
 						<div class="space-y-2">
-							<p class="font-serif text-4xl font-light">$9.5M</p>
+							<p class="text-2xl font-bold">$9.5M</p>
 							<p>
 								Recently completed Escalante
 								Solar boosts tax revenue in
@@ -284,7 +284,7 @@
 					</h2>
 					<div id="map" class="relative cursor-pointer">
 						<div id="energy-tooltip"
-							class="px-4 py-2 absolute text-base bg-navy text-white transition-[opacity,top,left] duration-500 z-20 rounded-md">
+							class="px-4 py-2 absolute text-base bg-navy text-white transition-[opacity,top,left] duration-500 z-20 rounded-md opacity-0">
 						</div>
 						<?xml version="1.0" encoding="UTF-8"?>
 						<svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 590.4 373.1">
@@ -654,6 +654,40 @@
 									d="M236.4,151.8c0,.1,0,.2,0,.3,0,.1,0,.3,0,.4-.4,1.8-1.9,3.1-3.8,3.1s-3.4-1.4-3.8-3.1c0-.1,0-.3,0-.4,0-.1,0-.2,0-.3,0-.2,0-.4,0-.6,0-.1,0-.3,0-.4.4-1.7,1.9-2.9,3.7-2.9s3.1,1.1,3.6,2.6c0,.1,0,.2.1.4,0,.2,0,.5,0,.8Z" />
 							</g>
 						</svg>
+					</div>
+					<style>
+						#map svg.active #Thermal>circle,
+						#map svg.active #Solar>circle,
+						#map svg.active #Wind>path {
+							opacity: 0.3;
+						}
+
+						#map svg.active #Thermal>circle:hover,
+						#map svg.active #Solar>circle:hover,
+						#map svg.active #Wind>path:hover {
+							opacity: 1;
+						}
+					</style>
+
+					<div class="flex gap-8 items-center justify-center py-8">
+						<div class="flex items-center gap-2">
+							<svg width="20" height="20" viewBox="0 0 20 20">
+								<circle cx="10" cy="10" r="8" class="st0" />
+							</svg>
+							<span class="text-xl font-bold">Solar</span>
+						</div>
+						<div class="flex items-center gap-2">
+							<svg width="20" height="20" viewBox="0 0 20 20">
+								<circle cx="10" cy="10" r="8" class="st2" />
+							</svg>
+							<span class="text-xl font-bold">Wind</span>
+						</div>
+						<div class="flex items-center gap-2">
+							<svg width="20" height="20" viewBox="0 0 20 20">
+								<circle cx="10" cy="10" r="8" class="st1" />
+							</svg>
+							<span class="text-xl font-bold">Thermal</span>
+						</div>
 					</div>
 
 				</section>
