page(leadership): wip, grid in place v1

--- a/leadership.htm
+++ b/leadership.htm
@@ -108,10 +108,232 @@
 					<h2 class="font-serif font-light text-3xl">
 						Tri-State’s leadership team
 					</h2>
-					<div class="grid gap-y-12 mt-20 sm:grid-cols-2 sm:gap-x-8 md:grid-cols-3 md:px-4">
 
-
+					<div class="grid gap-y-12 mt-20 sm:grid-cols-2 sm:gap-x-8 xl:grid-cols-4" data-leadership>
+						<template id="bio-template">
+							<div class="bio-container" data-bio-container>
+								Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, explicabo eaque, veniam
+								excepturi nam officia quam molestiae quisquam nihil delectus iure a hic ipsa maxime
+								exercitationem natus dignissimos. Nobis possimus vel aperiam dolore, voluptates
+								consequatur eius quos laudantium fugit expedita fugiat, nisi placeat sequi repellendus
+								ipsum omnis exercitationem nostrum. Eveniet saepe atque eos exercitationem alias
+								facilis, modi dignissimos incidunt distinctio cum ex veritatis dicta soluta quod
+								suscipit aliquam vel, consequatur sit sint, ducimus minus aperiam tenetur! Ducimus,
+								quaerat, labore illum ab blanditiis aliquid repudiandae ratione rem laborum animi autem
+								veniam voluptatum consequatur quo esse maiores qui repellendus, eum amet unde.
+							</div>
+						</template>
+						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
+							data-card>
+							<div class="flex flex-col">
+								<div class="relative w-full aspect-square">
+									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
+										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
+								</div>
+								<div class="text-xl font-bold mt-6">Duane Highley</div>
+								<div class="mb-6">Chief Executive Officer</div>
+								<div class="mt-auto">
+									<button type="button"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										data-expand>
+										View full profile
+									</button>
+								</div>
+							</div>
+							<div class="overflow-hidden" data-bio>
+								<div class="py-8">
+									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
+									previously served as President/CEO
+									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
+									Inc.
+								</div>
+							</div>
+						</div>
+						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
+							data-card>
+							<div class="flex flex-col">
+								<div class="relative w-full aspect-square">
+									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
+										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
+								</div>
+								<div class="text-xl font-bold mt-6">Duane Highley</div>
+								<div class="mb-6">Chief Executive Officer</div>
+								<div class="mt-auto">
+									<button type="button"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										data-expand>
+										View full profile
+									</button>
+								</div>
+							</div>
+							<div class="overflow-hidden" data-bio>
+								<div class="py-8">
+									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
+									previously served as President/CEO
+									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
+									Inc.
+								</div>
+							</div>
+						</div>
+						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
+							data-card>
+							<div class="flex flex-col">
+								<div class="relative w-full aspect-square">
+									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
+										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
+								</div>
+								<div class="text-xl font-bold mt-6">Duane Highley</div>
+								<div class="mb-6">Chief Executive Officer</div>
+								<div class="mt-auto">
+									<button type="button"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										data-expand>
+										View full profile
+									</button>
+								</div>
+							</div>
+							<div class="overflow-hidden" data-bio>
+								<div class="py-8">
+									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
+									previously served as President/CEO
+									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
+									Inc.
+								</div>
+							</div>
+						</div>
+						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
+							data-card>
+							<div class="flex flex-col">
+								<div class="relative w-full aspect-square">
+									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
+										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
+								</div>
+								<div class="text-xl font-bold mt-6">Duane Highley</div>
+								<div class="mb-6">Chief Executive Officer</div>
+								<div class="mt-auto">
+									<button type="button"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										data-expand>
+										View full profile
+									</button>
+								</div>
+							</div>
+							<div class="overflow-hidden" data-bio>
+								<div class="py-8">
+									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
+									previously served as President/CEO
+									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
+									Inc.
+								</div>
+							</div>
+						</div>
+						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
+							data-card>
+							<div class="flex flex-col">
+								<div class="relative w-full aspect-square">
+									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
+										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
+								</div>
+								<div class="text-xl font-bold mt-6">Duane Highley</div>
+								<div class="mb-6">Chief Executive Officer</div>
+								<div class="mt-auto">
+									<button type="button"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										data-expand>
+										View full profile
+									</button>
+								</div>
+							</div>
+							<div class="overflow-hidden" data-bio>
+								<div class="py-8">
+									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
+									previously served as President/CEO
+									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
+									Inc.
+								</div>
+							</div>
+						</div>
+						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
+							data-card>
+							<div class="flex flex-col">
+								<div class="relative w-full aspect-square">
+									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
+										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
+								</div>
+								<div class="text-xl font-bold mt-6">Duane Highley</div>
+								<div class="mb-6">Chief Executive Officer</div>
+								<div class="mt-auto">
+									<button type="button"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										data-expand>
+										View full profile
+									</button>
+								</div>
+							</div>
+							<div class="overflow-hidden" data-bio>
+								<div class="py-8">
+									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
+									previously served as President/CEO
+									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
+									Inc.
+								</div>
+							</div>
+						</div>
+						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
+							data-card>
+							<div class="flex flex-col">
+								<div class="relative w-full aspect-square">
+									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
+										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
+								</div>
+								<div class="text-xl font-bold mt-6">Duane Highley</div>
+								<div class="mb-6">Chief Executive Officer</div>
+								<div class="mt-auto">
+									<button type="button"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										data-expand>
+										View full profile
+									</button>
+								</div>
+							</div>
+							<div class="overflow-hidden" data-bio>
+								<div class="py-8">
+									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
+									previously served as President/CEO
+									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
+									Inc.
+								</div>
+							</div>
+						</div>
+						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
+							data-card>
+							<div class="flex flex-col">
+								<div class="relative w-full aspect-square">
+									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
+										alt="" class="absolute inset-0 size-full object-cover object-top rounded-full">
+								</div>
+								<div class="text-xl font-bold mt-6">Duane Highley</div>
+								<div class="mb-6">Chief Executive Officer</div>
+								<div class="mt-auto">
+									<button type="button"
+										class="inline-block rounded-full border border-black px-4 py-2 font-normal no-underline transition-transform text-black hover:text-black"
+										data-expand>
+										View full profile
+									</button>
+								</div>
+							</div>
+							<div class="overflow-hidden" data-bio>
+								<div class="py-8">
+									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
+									previously served as President/CEO
+									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
+									Inc.
+								</div>
+							</div>
+						</div>
 					</div>
+
+
 				</section>
 
 				<!-- "Cooperative leadership live..." -->
