--- a/leadership.htm
+++ b/leadership.htm
@@ -433,6 +433,32 @@
 		</div>
 	</main>
 
+	<script>
+		function getGridLayout() {
+			const width = window.innerWidth;
+
+			if (width >= 1280) {  // xl breakpoint (4 columns)
+				return '4-col';
+			} else if (width >= 640) { // sm breakpoint (2 columns)
+				return '2-col';
+			} else {
+				return '1-col';  // mobile (1 column)
+			}
+		}
+
+		document.addEventListener('DOMContentLoaded', function () {
+			const cards = document.querySelectorAll('[data-card]');
+
+			cards.forEach(card => {
+				const expandButton = card.querySelector('[data-expand]');
+
+				expandButton.addEventListener('click', () => {
+					const layout = getGridLayout();
+					console.log('Current layout:', layout);
+				});
+			});
+		});
+	</script>
 </body>
 
 </html>
