page(leadership): wip, js v2, phone working

--- a/leadership.htm
+++ b/leadership.htm
@@ -33,6 +33,7 @@
 
 	<link rel="stylesheet" href="assets/css/build.css" />
 
+	<script src="./assets/js/grid-leadership.js" defer></script>
 </head>
 
 <!-- https://tristate.coop -->
@@ -109,7 +110,7 @@
 						Tri-State’s leadership team
 					</h2>
 
-					<div class="grid gap-y-12 mt-20 sm:grid-cols-2 sm:gap-x-8 xl:grid-cols-4" data-leadership>
+					<div class="mt-20" data-leadership>
 						<template id="bio-template">
 							<div class="bio-container" data-bio-container>
 								Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, explicabo eaque, veniam
@@ -123,8 +124,7 @@
 								veniam voluptatum consequatur quo esse maiores qui repellendus, eum amet unde.
 							</div>
 						</template>
-						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
-							data-card>
+						<div class="p-4 outline outline-solid outline-1 group" data-card>
 							<div class="flex flex-col">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
@@ -140,8 +140,8 @@
 									</button>
 								</div>
 							</div>
-							<div class="overflow-hidden" data-bio>
-								<div class="py-8">
+							<div class="" data-bio>
+								<div class="">
 									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
 									previously served as President/CEO
 									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
@@ -149,8 +149,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
-							data-card>
+						<div class="p-4 outline outline-solid outline-1 group" data-card>
 							<div class="flex flex-col">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
@@ -166,8 +165,8 @@
 									</button>
 								</div>
 							</div>
-							<div class="overflow-hidden" data-bio>
-								<div class="py-8">
+							<div class="" data-bio>
+								<div class="">
 									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
 									previously served as President/CEO
 									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
@@ -175,8 +174,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
-							data-card>
+						<div class="p-4 outline outline-solid outline-1 group" data-card>
 							<div class="flex flex-col">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
@@ -192,8 +190,8 @@
 									</button>
 								</div>
 							</div>
-							<div class="overflow-hidden" data-bio>
-								<div class="py-8">
+							<div class="" data-bio>
+								<div class="">
 									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
 									previously served as President/CEO
 									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
@@ -201,8 +199,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
-							data-card>
+						<div class="p-4 outline outline-solid outline-1 group" data-card>
 							<div class="flex flex-col">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
@@ -218,8 +215,8 @@
 									</button>
 								</div>
 							</div>
-							<div class="overflow-hidden" data-bio>
-								<div class="py-8">
+							<div class="" data-bio>
+								<div class="">
 									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
 									previously served as President/CEO
 									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
@@ -227,8 +224,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
-							data-card>
+						<div class="p-4 outline outline-solid outline-1 group" data-card>
 							<div class="flex flex-col">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
@@ -244,8 +240,8 @@
 									</button>
 								</div>
 							</div>
-							<div class="overflow-hidden" data-bio>
-								<div class="py-8">
+							<div class="" data-bio>
+								<div class="">
 									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
 									previously served as President/CEO
 									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
@@ -253,8 +249,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
-							data-card>
+						<div class="p-4 outline outline-solid outline-1 group" data-card>
 							<div class="flex flex-col">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
@@ -270,8 +265,8 @@
 									</button>
 								</div>
 							</div>
-							<div class="overflow-hidden" data-bio>
-								<div class="py-8">
+							<div class="" data-bio>
+								<div class="">
 									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
 									previously served as President/CEO
 									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
@@ -279,8 +274,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
-							data-card>
+						<div class="p-4 outline outline-solid outline-1 group" data-card>
 							<div class="flex flex-col">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
@@ -296,8 +290,8 @@
 									</button>
 								</div>
 							</div>
-							<div class="overflow-hidden" data-bio>
-								<div class="py-8">
+							<div class="" data-bio>
+								<div class="">
 									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
 									previously served as President/CEO
 									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
@@ -305,8 +299,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="grid [grid-template-rows:auto_0fr] transition-all duration-300 p-4 outline outline-solid outline-1 group"
-							data-card>
+						<div class="p-4 outline outline-solid outline-1 group" data-card>
 							<div class="flex flex-col">
 								<div class="relative w-full aspect-square">
 									<img src="https://tristate.coop/sites/default/files/images/leadership/2025/duane-highley-400x500.jpg"
@@ -322,8 +315,8 @@
 									</button>
 								</div>
 							</div>
-							<div class="overflow-hidden" data-bio>
-								<div class="py-8">
+							<div class="" data-bio>
+								<div class="">
 									Duane joined Tri-State in 2019 and has 39 years of experience with cooperatives. He
 									previously served as President/CEO
 									for Arkansas Electric Cooperative Corp. (AECC) and Arkansas Electric Cooperatives,
@@ -433,32 +426,7 @@
 		</div>
 	</main>
 
-	<script>
-		function getGridLayout() {
-			const width = window.innerWidth;
 
-			if (width >= 1280) {  // xl breakpoint (4 columns)
-				return '4-col';
-			} else if (width >= 640) { // sm breakpoint (2 columns)
-				return '2-col';
-			} else {
-				return '1-col';  // mobile (1 column)
-			}
-		}
-
-		document.addEventListener('DOMContentLoaded', function () {
-			const cards = document.querySelectorAll('[data-card]');
-
-			cards.forEach(card => {
-				const expandButton = card.querySelector('[data-expand]');
-
-				expandButton.addEventListener('click', () => {
-					const layout = getGridLayout();
-					console.log('Current layout:', layout);
-				});
-			});
-		});
-	</script>
 </body>
 
 </html>
