--- a/leadership.htm
+++ b/leadership.htm
@@ -112,16 +112,34 @@
 
 					<div class="mt-20 relative grid gap-y-12 sm:grid-cols-2 sm:gap-x-8 xl:grid-cols-4" data-leadership>
 						<template id="bio-template">
-							<div class="bio-container" data-bio-container>
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, explicabo eaque, veniam
-								excepturi nam officia quam molestiae quisquam nihil delectus iure a hic ipsa maxime
-								exercitationem natus dignissimos. Nobis possimus vel aperiam dolore, voluptates
-								consequatur eius quos laudantium fugit expedita fugiat, nisi placeat sequi repellendus
-								ipsum omnis exercitationem nostrum. Eveniet saepe atque eos exercitationem alias
-								facilis, modi dignissimos incidunt distinctio cum ex veritatis dicta soluta quod
-								suscipit aliquam vel, consequatur sit sint, ducimus minus aperiam tenetur! Ducimus,
-								quaerat, labore illum ab blanditiis aliquid repudiandae ratione rem laborum animi autem
-								veniam voluptatum consequatur quo esse maiores qui repellendus, eum amet unde.
+							<!-- 
+							col-start-1
+							col-start-2 
+							col-start-3 
+							col-start-4 
+							row-start-1
+							row-start-2
+							row-start-3
+							row-start-4
+							-->
+							<div data-bio-container>
+								<p>
+
+									Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, explicabo eaque,
+									veniam
+									excepturi nam officia quam molestiae quisquam nihil delectus iure a hic ipsa maxime
+									exercitationem natus dignissimos. Nobis possimus vel aperiam dolore, voluptates
+									consequatur eius quos laudantium fugit expedita fugiat, nisi placeat sequi
+									repellendus
+									ipsum omnis exercitationem nostrum. Eveniet saepe atque eos exercitationem alias
+									facilis, modi dignissimos incidunt distinctio cum ex veritatis dicta soluta quod
+									suscipit aliquam vel, consequatur sit sint, ducimus minus aperiam tenetur! Ducimus,
+									quaerat, labore illum ab blanditiis aliquid repudiandae ratione rem laborum animi
+									autem
+									veniam voluptatum consequatur quo esse maiores qui repellendus, eum amet unde.
+								</p>
+								<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo fuga soluta mollitia?
+									Debitis modi aliquam eum ut impedit. Ipsa, magni.</p>
 							</div>
 						</template>
 						<div class="p-4 outline outline-solid outline-1 group" data-card>
@@ -324,20 +342,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="bg-white absolute col-start-2 row-start-4 col-span-2" data-bio-container>
-							<div class="p-4 text-left">
 
-								Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, explicabo eaque, veniam
-								excepturi nam officia quam molestiae quisquam nihil delectus iure a hic ipsa maxime
-								exercitationem natus dignissimos. Nobis possimus vel aperiam dolore, voluptates
-								consequatur eius quos laudantium fugit expedita fugiat, nisi placeat sequi repellendus
-								ipsum omnis exercitationem nostrum. Eveniet saepe atque eos exercitationem alias
-								facilis, modi dignissimos incidunt distinctio cum ex veritatis dicta soluta quod
-								suscipit aliquam vel, consequatur sit sint, ducimus minus aperiam tenetur! Ducimus,
-								quaerat, labore illum ab blanditiis aliquid repudiandae ratione rem laborum animi autem
-								veniam voluptatum consequatur quo esse maiores qui repellendus, eum amet unde.
-							</div>
-						</div>
 					</div>
 
 
