--- a/leadership.htm
+++ b/leadership.htm
@@ -111,6 +111,7 @@
 					</h2>
 
 					<div class="mt-20 relative grid gap-y-12 sm:grid-cols-2 sm:gap-x-8 xl:grid-cols-4" data-leadership>
+						<div class="grid-cover" data-cover></div>
 
 						<div class="p-4 outline outline-solid outline-1 group" data-card>
 							<div class="flex flex-col">
@@ -312,6 +313,7 @@
 								</div>
 							</div>
 						</div>
+
 
 					</div>
 					<template id="bio-template">
@@ -326,8 +328,7 @@
 							row-start-4
 							-->
 						<div data-bio-container>
-							<div class="bg-white text-left p-4">
-
+							<div class="bg-white text-left p-4 -m-4 outline outline-1 rounded-lg">
 								<p>
 
 									Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, explicabo eaque,
